--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
       <a-scene
         embedded
-        arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+        arjs="sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
       >
         <a-assets>
           <a-asset-item
