--- a/index.html
+++ b/index.html
@@ -7,12 +7,56 @@
     <title>Devops - AR Discovery</title>
 
     <!-- Script files -->
-    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+
+    <!-- Font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <style>
+      * {
+        margin: 0;
+      }
+
+      body {
+        overflow: hidden;
+      }
+
+      #burger {
+        position: fixed;
+        top: 16px;
+        left: 16px;
+
+        padding: 16px;
+        border-radius: 4px;
+        border-width: 0;
+        cursor: pointer;
+
+        filter: drop-shadow(-2px 2px 2px #000);
+
+        font-size: 16px;
+        background-color: white;
+      }
+
+      spline-viewer {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    <body style="margin: 0px; overflow: hidden">
+    <body>
+      <button id="burger">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+
       <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
       <a-scene
         embedded
@@ -21,7 +65,7 @@
         <a-assets>
           <a-asset-item
             id="animated-asset"
-            src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"
+            src="./assets/computer/icon.gltf"
           ></a-asset-item>
         </a-assets>
 
@@ -34,7 +78,13 @@
         </a-marker>
 
         <a-marker id="animated-marker" type="barcode" value="6">
-          <a-entity gltf-model="#animated-asset" scale="2"> </a-entity>
+          <a-entity
+            gltf-model="#animated-asset"
+            rotation="90 0 0"
+            scale="0.5"
+            color="blue"
+          >
+          </a-entity>
         </a-marker>
 
         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
